# gorillagenics

./: .env.example  .gitignore  .replit  CHANGELOG.md  README.md  README_bankroll.md  backend_models_Pick.js  backend_models_PlayerMetric_Version1.js  backend_models_PlayerMetric_Version2.js  backend_package_Version1.json  backend_scrapers_injuryReports_Version1.js  backend_scrapers_injuryReports_Version2.js  backend_scrapers_nflStats_Version1.js  backend_scrapers_nflStats_Version2.js  backend_scrapers_socialMetrics_Version1.js  backend_scrapers_socialMetrics_Version2.js  backend_scrapers_weatherTags_Version1.js  backend_scrapers_weatherTags_Version2.js  backend_services_pickBuilder.js  backend_utils_bankrollManager.js  backend_utils_ethics_Version1.js  backend_utils_ethics_Version2.js  backend_utils_juiceWatch_Version1.js  backend_utils_normalizeMetrics_Version1.js  backend_utils_normalizeMetrics_Version2.js  backend_utils_scrapeManager_Version1.js  backend_utils_scrapeManager_Version2.js  examples_bankrollDemo.js  gg-2025-nfl-depth-charts - Sheet1 (1).csv  gg-nf-injury-report - Sheet1.csv  github_workflows_nfl-depth-chart-sync.yml  gpicks.py  install.packages("nflverse")  package-lock.json  package.json  pyproject.toml  replit.md  scripts_nfl_depth_scraper.py  tailwind.config.ts  tests_bankrollManager.test.js
attached_assets/: Pasted--GuerillaGenics-Live-Over-Under-Dashboard-Build-a-full-stack-web-app-for-GuerillaGenics-a-satiric-1757095605226_1757095605227.txt  (+19 more)
backend/: package.json
client/: index.html
examples/: picks.csv
server/: index.ts  routes.ts  storage.ts  (+2 more)
(+151 files in other folders)
