[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "GuerillaGenics full-stack application with Python CLI for DFS sports betting analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
]

[project.scripts]
gg3 = "gorillagenics.cli:main"
